<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">币赢</string>
    <string name="market">行情</string>
    <string name="trade">交易</string>
    <string name="c2c">C2C</string>
    <string name="finance">资产</string>
    <string name="mine">我的</string>
    <string name="risk">风险提示</string>
    <string-array name="market_subitems">
        <item>Custom</item>
        <item>All</item>
    </string-array>
    <string-array name="otc_order_man">
        <item>未支付</item>
        <item>已支付</item>
        <item>已取消</item>
        <item>已完成</item>
        <item>申诉中</item>
    </string-array>
    <string-array name="otc_order_man_shop_buy">
        <item>待支付</item>
        <item>已支付</item>
        <item>已取消</item>
        <item>已完成</item>
        <item>申诉中</item>
    </string-array>
    <string-array name="otc_order_man_shop_sell">
        <item>待确认</item>
        <item>未支付</item>
        <item>已取消</item>
        <item>已完成</item>
        <item>申诉中</item>
    </string-array>
    <string-array name="grade_fee">
        <item>0.2%</item>
        <item>0.15%</item>
        <item>0.12%</item>
        <item>0.08%</item>
        <item>0.05%</item>
        <item />
    </string-array>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">释放刷新…</string>
    <string name="pull_to_refresh_refreshing_label">刷新…</string>
    <string name="pull_to_refresh_load_normal">更多…</string>
    <string name="pull_to_refresh_load_release">松开载入更多</string>
    <string name="pull_to_refresh_load_ing">加载…</string>
    <string name="pull_to_refresh_lasttime">更新</string>
    <string name="load_error">请再次尝试</string>
    <string name="load_empty">暂无数据</string>
    <string name="number">数量</string>
    <string name="state">状态</string>
    <string name="address">地址</string>
    <string name="dealID">交易ID</string>
    <string name="wallet_processing">钱包处理中</string>
    <string name="date">日期</string>
    <string name="currency_own">我的币种</string>
    <string name="fansup">FansUp</string>
    <string name="fabi_road">买币通道</string>
    <string name="my_coin">我的币种</string>
    <string name="net_error">网络错误,点击刷新重试！</string>
    <string name="no_select">您还未添加任何自选交易对</string>
    <string name="market_volume">市场</string>
    <string name="zhangfu">涨幅(24h)</string>
    <string name="trade_explain1">
    Coinw为保护广大投资者的利益，对区块链资产交易品种始终保持开放而谨慎的态度。近年来，Coinw对全球数百个区块链资产品种进行跟踪调研，基于市场活跃度，项目管理，团队可信度，战略定位，技术可行性等五个维护进行评估。
  </string>
    <string name="trade_explain2">市场行情波动较大，与主区交易的区块链资产相比，创新交易区的交易品种诞生时间相对较短，技术成熟度有待时间验证，市场认知程度相对较低，具有相对较高的风险性。</string>
    <string name="xianshi_wran1">潜力交易区主要致力于对富有发展潜力的初期区块链项目给予支持。虽然此类项目在技术或
    市场等方面得到了一定认可，但是由于项目发展尚处在初期阶段，币赢网CoinW无法对其
    价值共识与市场流通情况做出任何保证。请仔细浏览相关数字资产官网及白皮书等信息，根
    据自身情况谨慎参与投资。
  </string>
    <string name="xianshi_wran12">创新交易品种为创新型产品，全球流动性较小，价格波动较大，风险较大的区块链资产。Coinw
      强烈建议您事先调查了解，在自身所能承受的风险范围内参与交易。</string>
    <string name="xianshi_wran11">低流通区数字资产属于风险较高的区块链资产。可能面临下架退市风险，请在投资前谨慎考虑。</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="go_trade">去交易</string>
    <string name="search">搜索</string>
    <string name="main_area">主区</string>
    <string name="price">价格</string>
    <string name="price_limit">涨跌幅(24H)</string>
    <string name="hotList">热搜榜单</string>
    <string name="place_new_order">重新下单</string>
    <string name="cx_area">创新区</string>
    <string name="QR_confirm">扫码登录确认</string>
    <string name="safe_confirm">为保障账号安全，请确认本人操作</string>
    <string name="login_confirm">确认登录</string>
    <string name="already_read">全部已读</string>
    <string name="notice">公告</string>
    <string name="news">新闻</string>
    <string name="trade_explain3">投资于创新区区块链资产的投资者将面临比主区交易更大的风险，请用户充分学习并了解所有投资风险因素后，理性投资。</string>
    <string name="trade_explain4">经过市场充分验证和认可，全球流动性较好，风险较低。</string>
    <string name="nHyperPay">系统检测到您还未安装HyperPay钱包</string>
    <string name="c2c_if">C2C充值为用户与用户之间点对点的充值，直接转账，平台不接受充值汇款</string>
    <string name="c2c_if2">如需申请成为商家请发邮件到support@coinw.com</string>
    <string name="c2c_if3">商家处理时间 7x24小时。</string>
    <string name="no_data">亲，您还没有任何委单~</string>
    <string name="buy">买入</string>
    <string name="trade_num">成交笔数</string>
    <string name="trade_rate">成交速度</string>
    <string name="trade_sum">已成交金额</string>
    <string name="confirm">确定</string>
    <string name="kefu_doa_1">您今天的智能验证已达到上限3次，请联系QQ客服进行验证，验证通过后提现金额可达300万CNYT。QQ:23275422</string>
    <string name="l24">24H量</string>
    <string name="copy">复制</string>
    <string name="copy_suc">复制成功</string>
    <string name="empty_address">地址为空</string>
    <string name="nodata">没有数据哦</string>
    <string name="please_in_psw">请输入交易密码</string>
    <string name="memo_empty">MEMO地址为空</string>
    <string name="buy1">购买</string>
    <string name="sell">出售</string>
    <string name="buy_otc">购买</string>
    <string name="sell_otc">出售</string>
    <string name="grade1">您当前的VIP5尚在生效中,\n请到期后再升级</string>
    <string name="finace_tip1">不要透露密码或短信、邮箱、谷歌验证给任何人，包括币赢工作人员</string>
    <string name="finace_tip2">不要打任何声称是币赢的客服电话</string>
    <string name="finace_tip3">不要向任何声称是币赢的工作人员转账</string>
    <string name="iknow">知道了</string>
    <string name="iknow1">我知道了</string>
    <string name="one_hour">1小时前</string>
    <string name="title">标题</string>
    <string name="correlation">相关币种:</string>
    <string name="correlation1">相关币种</string>
    <string name="update">升级</string>
    <string name="open_coin">开启coins手续费折扣</string>
    <string name="unlogin">未登录</string>
    <string name="welcome">欢迎来到Coinw</string>
    <string name="order_man">委单管理</string>
    <string name="add_walet">添加钱包地址</string>
    <string name="time">时间</string>
    <string name="trade_num1">交易量</string>
    <string name="nodata1">亲，您还没有任何订单数据~</string>
    <string name="asset_sum">总资产</string>
    <string name="useble_asset">可用资产</string>
    <string name="totrade">去交易</string>
    <string name="tx">提现</string>
    <string name="order_detail">订单详情</string>
    <string name="recharge_num">充值金额</string>
    <string name="merchant_name">商家姓名</string>
    <string name="address_man">地址管理</string>
    <string name="red_envelope">我的红包</string>
    <string name="otctrade">OTC交易</string>
    <string name="hpy_walet">HyperPay 钱包</string>
    <string name="hpy_lc">HyperPay 赚币</string>
    <string name="hpy_lc1">HyperPay赚币</string>
    <string name="hpy_transfer">HyperPay 互转</string>
    <string name="unbind">未绑定</string>
    <string name="safe_center">安全中心</string>
    <string name="cw_earn">币赢赚币</string>
    <string name="me_vip">我的VIP</string>
    <string name="identity">身份认证</string>
    <string name="hour_724">7×24小时</string>
    <string name="online_service">在线客服</string>
    <string name="str_red_envelope">红包</string>
    <string name="idea">意见反馈</string>
    <string name="current_versoin">当前版本</string>
    <string name="safe_finish">安全退出</string>
    <string name="safe_finish_success">退出登录成功</string>
    <string name="fee_fx">手续费返现</string>
    <string name="nodata2">您还没有任何订单数据</string>
    <string name="load">努力加载中...</string>
    <string name="all">全部</string>
    <string name="unuseble_asset">冻结</string>
    <string name="c2c_info1">所有认证商家均通过实名认证，并提供等额保证金，可放心兑换。每次交易都会冻结商家相应额度的资产，以保证交易安全。</string>
    <string name="coin">币种</string>
    <string name="bsj">币世界</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="my_assert">我的资产</string>
    <string name="bind_email_code">验证邮件已发送成功，请前往邮箱点击验证链接完成绑定</string>
    <string name="tjfy">金牌经纪人</string>
    <string name="kt">空投</string>
    <string name="my_grade">我的VIP级别</string>
    <string name="cu_fee">当前手续费</string>
    <string name="change_phone">修改手机号码</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="phone_error">手机号不合法</string>
    <string name="share_png">图片分享</string>
    <string name="share_link">链接分享</string>
    <string name="buy2">买</string>
    <string name="num">数量</string>
    <string name="get_code_suc">获取验证码成功</string>
    <string name="sell1">卖</string>
    <string name="sell2">卖出</string>
    <string name="send_fail">发送失败,服务器异常</string>
    <string name="send_fail1">发送失败,网络超时</string>
    <string name="default_sd">默认深度</string>
    <string name="default_dw">默认档位</string>
    <string name="send_code">发送验证码</string>
    <string name="close">关闭</string>
    <string name="change_suc">修改成功</string>
    <string name="useful">可用：</string>
    <string name="service_expec">服务器异常,请稍后再试</string>
    <string name="bind_suc">绑定成功</string>
    <string name="inputphone">请输入正确的手机号</string>
    <string name="google_error">谷歌验证码不能为空</string>
    <string name="phone_error1">新手机验证码不能为空</string>
    <string name="yjkm">预计可买：</string>
    <string name="trade_num2">交易额：</string>
    <string name="des">介绍</string>
    <string name="refresh">刷新</string>
    <string name="seradd">虚拟币提现地址设置</string>
    <string name="c2c_inf">请使用本人实名绑定的银行卡进行C2C业务，否则无法入账，商户可能不会退回。禁止使用微信、支付宝、他人代付、ATM及柜台转账等第三方转账。</string>
    <string name="addadd">新增地址</string>
    <string name="add">新增</string>
    <string name="send">发送</string>
    <string name="address_empt">提币地址不能为空</string>
    <string name="in_remarks">请填写备注</string>
    <string name="psw_empty">交易密码不能为空</string>
    <string name="goole_empty">Google验证码不能为空</string>
    <string name="add_suc">添加成功</string>
    <string name="bank_name">开户银行</string>
    <string name="bank_number">银行账户</string>
    <string name="getuseinfo_error">获取用户信息失败</string>
    <string name="m_remarks">汇款备注</string>
    <string name="order_number">订单编号</string>
    <string name="wyfk">我已付款</string>
    <string name="shfk">稍后付款</string>
    <string name="bind_google">绑定谷歌身份验证器</string>
    <string name="gg">公告 CNYT商户充值升级公告</string>
    <string name="shop_charge">商户充值</string>
    <string name="qy_charge">企业充值</string>
    <string name="know">须知</string>
    <string name="cny_record">CNY充值记录</string>
    <string name="please_login">请先登录!</string>
    <string name="please_ingoo">请输入Google验证码!</string>
    <string name="my_empty">秘钥不能为空!</string>
    <string name="please_inpsw">请输入登录密码!</string>
    <string name="please_inpsw2">请输入登录密码</string>
    <string name="identity1">身份验证</string>
    <string name="gjrz">高级认证</string>
    <string name="please_inname">请输入姓名</string>
    <string name="please_id">请输入身份证号</string>
    <string name="ok">好的</string>
    <string name="last_price">最新价</string>
    <string name="trade_num3">成交量</string>
    <string name="kpj">开盘</string>
    <string name="spj">收盘</string>
    <string name="max">最高</string>
    <string name="min">最低</string>
    <string name="chart_change_rate">涨跌幅</string>
    <string name="change_amount">涨跌额</string>
    <string name="c36">你已通过币赢网的实名认证</string>
    <string name="c37">您的身份信息</string>
    <string name="c38">姓名：</string>
    <string name="c39">证件类型：身份证</string>
    <string name="c40">身份证号：</string>
    <string name="c41">认证时间：</string>
    <string name="c46">问题类型</string>
    <string name="c47">未解决</string>
    <string name="c48">问题类型</string>
    <string name="c49">反馈内容</string>
    <string name="c50">回复:</string>
    <string name="c51">回复内容</string>
    <string name="c57">时间</string>
    <string name="project_incentives">项目激励</string>
    <string name="project_incentive_bonus">项目激励金</string>
    <string name="incentive_des">指项目方为鼓励用户成交，给予相应的币种发放的一种奖励方式。</string>
    <string name="characteristics">项目奖励金的特性</string>
    <string name="frozen">默认为冻结状态，用户需完成项目方指定规则来解冻；</string>
    <string name="release_condition">释放条件</string>
    <string name="str_name">名称</string>
    <string name="str_chg">涨跌幅</string>
    <string name="earn_bill_filter_type1">所有交易</string>
    <string name="earn_bill_filter_type2">所有项目</string>
    <string name="earn_bill_filter_type3">所有币种</string>
    <string name="all_zj">全部赠金</string>
    <string name="contract_cash">合约体验金</string>
    <string name="bb_cash">现货赠金</string>
</resources>