<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chart_info"
    android:orientation="horizontal"
    android:padding="6dp"
    tools:ignore="MissingPrefix">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/c57"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/kpj"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/max"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/min"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/spj"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/chart_change_rate"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/change_amount"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/trade_num3"
            android:textColor="@color/color_7b759a"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="201511111" />
        <TextView
            android:id="@+id/tv_open_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_high_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_low_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_close_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_change_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
        <TextView
            android:id="@+id/tv_vol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="2dp"
            android:textColor="@color/color_ebe8f7"
            android:textSize="10sp"
            tools:text="546465" />
    </LinearLayout>
</LinearLayout>