<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:background="@color/background_main">
    
    <TextView android:id="@+id/tv1"
        style="@style/TextView_14_main2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/sl_color_normal_main2_selected_accent"
        android:text="@string/all_zj"
        android:gravity="center"/>
    <View style="@style/Line_main"/>
    <TextView android:id="@+id/tv2"
        style="@style/TextView_14_main2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/sl_color_normal_main2_selected_accent"
        android:text="@string/bb_cash"
        android:gravity="center"/>
    <View style="@style/Line_main"/>
    <TextView android:id="@+id/tv3"
        style="@style/TextView_14_main2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/sl_color_normal_main2_selected_accent"
        android:text="@string/contract_cash"
        android:gravity="center"/>

    <View android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/background_gray"/>
    
    <TextView
        android:id="@+id/tvCancel"
        style="@style/TextView_14_main2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/cancle"
        android:gravity="center"/>
</LinearLayout>